@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.259 2008/01/10 21:37:14 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.260 2008/02/14 17:05:20 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -1181,11 +1181,11 @@ set_decimalsign()
 	c_token++;
 	newlocale = try_to_get_string();
 	if (!newlocale)
-	    newlocale = getenv("LC_ALL");
+	    newlocale = gp_strdup(getenv("LC_ALL"));
 	if (!newlocale)
-	    newlocale = getenv("LC_NUMERIC");
+	    newlocale = gp_strdup(getenv("LC_NUMERIC"));
 	if (!newlocale)
-	    newlocale = getenv("LANG");
+	    newlocale = gp_strdup(getenv("LANG"));
 	if (!setlocale(LC_NUMERIC, newlocale ? newlocale : ""))
 	    int_error(c_token-1, "Could not find requested locale");
 	decimalsign = gp_strdup(localeconv()->decimal_point);
